syntax = "proto3";

package todo.v1;

option go_package = "github.com/ktsu2i/connect-todo/api/gen/todo/v1;todov1";

import "google/protobuf/timestamp.proto";

message Todo {
    int64 id = 1;
    string title = 2;
    bool done = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}

// ListTodos
message ListTodosRequest {}

message ListTodosResponse {
    repeated Todo todos = 1;
}

// GetTodo
message GetTodoRequest {
    int64 id = 1;
}

message GetTodoResponse {
    Todo todo = 1;
}

// CreateTodo
message CreateTodoRequest {
    string title = 1;
}

message CreateTodoResponse {
    Todo todo = 1;
}

// UpdateTodo
message UpdateTodoRequest {
    int64 id = 1;
    string title = 2;
    bool done = 3;
}

message UpdateTodoResponse {
    Todo todo = 1;
}

// DeleteTodo
message DeleteTodoRequest {
    int64 id = 1;
}

message DeleteTodoResponse {}

service TodoService {
    rpc ListTodos(ListTodosRequest) returns (ListTodosResponse);
    rpc GetTodo(GetTodoRequest) returns (GetTodoResponse);
    rpc CreateTodo(CreateTodoRequest) returns (CreateTodoResponse);
    rpc UpdateTodo(UpdateTodoRequest) returns (UpdateTodoResponse);
    rpc DeleteTodo(DeleteTodoRequest) returns (DeleteTodoResponse);
}
